# kawai

./: .gitignore  Cargo.toml  README.md  build.rs  check-interface-source.sh  check-solana-install.sh  check-trait-methods.sh  check-validator-logs.sh  find-api-structure.sh  find-entry-point.sh  find-library.sh  find-modules.sh  get-full-trait.sh  geyser-plugin-config.example.json  install-solana-cli.sh  install-solana-from-file.sh  install-solana-troubleshoot.sh  kawai_config.example.json  manual-solana-install.sh  remove-solana-repo.sh  show_waifu.sh  show_waifu_advanced.sh  verify-setup.sh
.cargo/: config.toml
src/: main.rs  waifu_art.rs
