[package]
name = "kawai"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
# Solana RPC and WebSocket clients
solana-client = "3.1.5"   # For RPC/WebSocket connections
solana-sdk = "3.0.0"      # For Solana types like Pubkey

# Async runtime
tokio = { version = "1", features = ["full"] }

# Utilities
bs58 = "0.5"              # Base58 encoding for pubkeys/signatures
serde_json = "1.0"        # JSON parsing for config
serde = { version = "1.0", features = ["derive"] }  # Config serialization

# CLI
clap = { version = "4", features = ["derive"] } # CLI arguments

# Desktop notifications
notify-rust = "4"         # Desktop notifications

# CSV logging
csv = "1.3"               # CSV logging

